--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     animation: {
                         'fade-in-down': 'fadeInDown 0.5s ease-out',
                         'bounce-slow': 'bounce 3s infinite',
+                        'spin-slow': 'spin 20s linear infinite',
                     },
                     keyframes: {
                         fadeInDown: {
@@ -116,7 +117,6 @@
         const Truck = (props) => <LucideIcon name="Truck" {...props} />;
         const Handshake = (props) => <LucideIcon name="Handshake" {...props} />;
         const MessageCircle = (props) => <LucideIcon name="MessageCircle" {...props} />;
-        const Mountain = (props) => <LucideIcon name="Mountain" {...props} />; // Ícone para o FAQ
 
         // --- Hooks & Componentes de Animação ---
         const useOnScreen = (ref, rootMargin = "0px") => {
@@ -177,7 +177,7 @@
 
         const FAQItem = ({ number, question, answer, isOpen, onClick }) => {
             return (
-                <div className="border-b border-cyan-500/30 last:border-0">
+                <div className="border-b border-cyan-500/30 last:border-0 relative z-10">
                     <button 
                         className="w-full py-6 flex items-center justify-between text-left focus:outline-none group"
                         onClick={onClick}
@@ -363,12 +363,7 @@
                 <header className="fixed w-full z-50 bg-slate-900/90 backdrop-blur-md border-b border-slate-800 transition-all duration-300">
                     <div className="container mx-auto px-6 h-20 flex items-center justify-between">
                     <div className="flex items-center gap-2">
-                        <div className="w-8 h-8 bg-cyan-500 rounded-tr-xl rounded-bl-xl flex items-center justify-center">
-                        <span className="font-bold text-slate-900 text-lg">E</span>
-                        </div>
-                        <span className="text-2xl font-extrabold tracking-tight text-white">
-                        Evereste<span className="text-cyan-400 font-light">Academy</span>
-                        </span>
+                        <img src="https://i.postimg.cc/DZgcVVDd/Logo2.png" alt="Evereste Academy" className="h-10 w-auto" />
                     </div>
 
                     <nav className="hidden md:flex gap-8 items-center text-sm font-medium text-slate-300">
@@ -408,18 +403,18 @@
                         Turmas abertas: Gestão & Projetos
                         </div>
                         <h1 className="text-5xl lg:text-7xl font-extrabold text-white mb-6 leading-[1.1]">
-                        A sua escalada para o <span className="text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-blue-500">topo da sua carreira</span>.
+                        A sua escalada para o <span className="text-transparent bg-clip-text bg-gradient-to-r from-blue-400 via-green-400 to-yellow-400">topo da sua carreira</span>.
                         </h1>
                         <p className="text-lg text-slate-400 mb-8 max-w-2xl mx-auto lg:mx-0 leading-relaxed">
                         Domine as habilidades mais exigidas pelo mercado, de Gestão e Liderança a Power BI e Finanças. Uma plataforma completa com <strong>aulas interativas</strong> e conteúdo 100% online.
                         </p>
-                        <div className="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start">
-                        <Button variant="primary" className="text-lg px-10 group">
-                            Começar agora <ArrowRight size={20} className="group-hover:translate-x-1 transition-transform" />
-                        </Button>
-                        <Button variant="secondary" className="text-lg px-8">
-                            Ver Planos
-                        </Button>
+                        <div className="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start items-center">
+                            <Button variant="primary" className="text-lg px-10 group">
+                                Começar agora <ArrowRight size={20} className="group-hover:translate-x-1 transition-transform" />
+                            </Button>
+                            <Button variant="secondary" className="text-lg px-8">
+                                Ver Planos
+                            </Button>
                         </div>
                     </FadeIn>
 
@@ -434,8 +429,8 @@
                             />
                             <div className="absolute z-20 bottom-8 left-8 right-8">
                                 <div className="bg-slate-900/90 backdrop-blur border border-slate-700 p-4 rounded-xl flex items-center gap-4 shadow-xl">
-                                <div className="bg-blue-500/20 p-3 rounded-full text-blue-400 animate-bounce-slow">
-                                    <Layers size={24} />
+                                <div className="w-12 h-12 rounded-full overflow-hidden bg-slate-800 border border-slate-700 p-1 animate-bounce-slow">
+                                     <img src="https://i.postimg.cc/J0b2gd8F/ODS-CIRCLE-1.png" alt="ODS" className="w-full h-full object-contain" />
                                 </div>
                                 <div>
                                     <p className="text-xs text-slate-400 uppercase font-bold">Em Alta</p>
@@ -534,7 +529,7 @@
                             {/* Card simulando a interface da Live */}
                             <div className="bg-slate-900 rounded-2xl border border-slate-700 p-2 shadow-2xl relative z-20 transform transition-transform duration-500 group-hover:rotate-y-2 group-hover:rotate-x-2">
                                 <div className="bg-slate-800 rounded-xl overflow-hidden aspect-video relative">
-                                <img src="https://images.unsplash.com/photo-1544531586-fde5298cdd40?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" className="w-full h-full object-cover opacity-60" />
+                                <img src="https://i.postimg.cc/3xzPbp59/online-studying-distance-learning-virtual-class-young-female-teacher-shooting-lesson-smart-phone.jpg" className="w-full h-full object-cover opacity-90" />
                                 
                                 <div className="absolute top-4 left-4 bg-red-600 text-white text-xs font-bold px-3 py-1 rounded-full flex items-center gap-2 animate-pulse shadow-lg shadow-red-600/40">
                                     <span className="w-2 h-2 bg-white rounded-full"></span> AO VIVO
@@ -733,9 +728,12 @@
                     <div className="container mx-auto px-6 max-w-4xl">
                         <FadeIn>
                             <div className="border border-cyan-500/30 rounded-3xl p-8 md:p-12 bg-slate-800/30 backdrop-blur-sm relative overflow-hidden">
-                                <div className="absolute top-0 right-0 w-32 h-32 bg-cyan-500/10 rounded-bl-full -mr-8 -mt-8 pointer-events-none"></div>
+                                {/* ODS Pattern Background */}
+                                <div className="absolute -right-20 -top-20 w-96 h-96 opacity-10 pointer-events-none">
+                                    <img src="https://i.postimg.cc/J0b2gd8F/ODS-CIRCLE-1.png" className="w-full h-full object-cover animate-spin-slow" />
+                                </div>
                                 
-                                <div className="flex flex-col md:flex-row justify-between items-start md:items-center mb-12 border-b border-cyan-500/30 pb-6">
+                                <div className="flex flex-col md:flex-row justify-between items-start md:items-center mb-12 border-b border-cyan-500/30 pb-6 relative z-10">
                                     <div>
                                         <span className="text-cyan-400 font-bold uppercase tracking-wider text-sm mb-2 block">FAQ</span>
                                         <h2 className="text-3xl md:text-5xl font-extrabold text-white">
@@ -743,12 +741,9 @@
                                             <span className="text-cyan-400">Frequentes</span>
                                         </h2>
                                     </div>
-                                    <div className="hidden md:block text-cyan-500/80 mt-4 md:mt-0">
-                                        <Mountain size={64} strokeWidth={1.5} />
-                                    </div>
                                 </div>
 
-                                <div className="space-y-2">
+                                <div className="space-y-2 relative z-10">
                                     {faqs.map((faq, idx) => (
                                         <FAQItem 
                                             key={idx}
@@ -771,10 +766,7 @@
                     <div className="grid grid-cols-2 md:grid-cols-4 gap-12 mb-16">
                         <div>
                         <div className="flex items-center gap-2 mb-6">
-                            <div className="w-6 h-6 bg-cyan-500 rounded-tr-lg rounded-bl-lg flex items-center justify-center">
-                            <span className="font-bold text-slate-900 text-xs">E</span>
-                            </div>
-                            <span className="text-xl font-bold text-white">Evereste</span>
+                            <img src="https://i.postimg.cc/DZgcVVDd/Logo2.png" alt="Evereste Academy" className="h-10 w-auto" />
                         </div>
                         <p className="mb-4">Desenvolvendo líderes e gestores para o futuro dos negócios.</p>
                         <div className="flex gap-4">
